src/tests/fixtures/generics/scalarPassedAsGenericArg.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
type Wrapper<T> = {
  /** @gqlField */
  value: T;
};

/** @gqlType */
type OtherType = {
  /** @gqlField */
  wrapper: Wrapper<string>;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/generics/scalarPassedAsGenericArg.ts:10:12 - error: Expected `Wrapper` to be passed a GraphQL type argument for type parameter `T`.

10   wrapper: Wrapper<string>;
              ~~~~~~~~~~~~~~~

  src/tests/fixtures/generics/scalarPassedAsGenericArg.ts:2:14
    2 type Wrapper<T> = {
                   ~
    Type parameter `T` is defined here
  src/tests/fixtures/generics/scalarPassedAsGenericArg.ts:4:10
    4   value: T;
               ~
    and expects a GraphQL type because it was used in a GraphQL position here.
